// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs default render 1`] = `
<div>
  <div
    class="MuiTabs-root"
  >
    <div
      class="MuiTabs-flexContainer"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed"
        role="tablist"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              <span
                class="MuiTab-labelContainer"
              >
                <span
                  class="MuiTab-label"
                >
                  Tab 1
                </span>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              <span
                class="MuiTab-labelContainer"
              >
                <span
                  class="MuiTab-label"
                >
                  Tab 2
                </span>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="MuiPrivateTabIndicator-root MuiPrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs with preselected option 1`] = `
<div>
  <div
    class="MuiTabs-root"
  >
    <div
      class="MuiTabs-flexContainer"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed"
        role="tablist"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
        >
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              <span
                class="MuiTab-labelContainer"
              >
                <span
                  class="MuiTab-label"
                >
                  Tab 1
                </span>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-selected"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              <span
                class="MuiTab-labelContainer"
              >
                <span
                  class="MuiTab-label"
                >
                  Tab 2
                </span>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="MuiPrivateTabIndicator-root MuiPrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs with preselected option using custom value 1`] = `
<div>
  <div
    class="MuiTabs-root"
  >
    <div
      class="MuiTabs-flexContainer"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed"
        role="tablist"
        style="margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer"
        >
          <button
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-selected"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              <span
                class="MuiTab-labelContainer"
              >
                <span
                  class="MuiTab-label"
                >
                  Tab 1
                </span>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiTab-wrapper"
            >
              <span
                class="MuiTab-labelContainer"
              >
                <span
                  class="MuiTab-label"
                >
                  Tab 2
                </span>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="MuiPrivateTabIndicator-root MuiPrivateTabIndicator-colorSecondary MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;
